# keda-jobs-monorepo-template

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  ci.yml.tpl
jobs/: nats-streams-config.sh
jobs/image-download/: Dockerfile  main.py  pyproject.toml  service.yaml
jobs/image-download/tests/: test_main.py
jobs/image-resize/: Dockerfile  main.py  pyproject.toml  service.yaml
jobs/image-resize/tests/: test_main.py
k8s/: .env.template  Makefile
k8s/kustomize/base/: namespace.yaml  rbac.yaml
k8s/kustomize/overlays/prod/: kustomization.yaml
k8s/manual/prod/: r2-secret.yaml.tpl
k8s/monitoring/: servicemonitors.yaml
k8s/monitoring/dashboards/: keda-dashboard.yaml  keda-jobs-dashboard.yaml  nats-dashboard.yaml
k8s/nats/: nats.yaml
k8s/setup-scripts/: clean-all.sh  setup-all.sh  setup-app.sh  setup-keda.sh  setup-monitoring.sh  setup-nats.sh  setup-secrets.sh
shared-py/: pyproject.toml
shared-py/src/: nats_consumer.py  r2.py
shared-py/tests/: test_nats_consumer.py  test_r2.py
